[package]
name = "paqus"
version = "0.1.9"
edition = "2024"
description = "Testnet v0.1.0"
readme = "README.md"
repository = "https://github.com/paqusprotocol/paqus"
license = "MIT"
keywords = ["blockchain", "proof-of-work", "post-quantum", "ml-dsa", "sha3"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
sha3 = "0.12.0"
ml_dsa = { package = "ml-dsa", version = "0.1.1" }
hex = "0.4"
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
argon2 = "0.6.0-rc.8"
thiserror = "2"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"
rstest = "0.26"
