[package]
name = "paqus"
version = "0.2.10"
edition = "2024"
description = "Core consensus primitives for the Paqus proof-of-work blockchain"
readme = "README.md"
repository = "https://github.com/paqusprotocol/paqus"
license = "MIT"
keywords = ["blockchain", "proof-of-work", "post-quantum", "ml-dsa", "sha3"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
sha3 = "0.12.0"
ml_dsa = { package = "ml-dsa", version = "0.1.1" }
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bech32 = "0.12.0"
zeroize = { version = "1.9.0", features = ["derive"] }
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.8.2"
hex = "0.4"

[[bench]]
name = "consensus"
harness = false

[[bench]]
name = "pow"
harness = false
