[package]
name = "paqus-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
paqus = { path = ".." }

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_protocol"
path = "fuzz_targets/decode_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_block"
path = "fuzz_targets/decode_block.rs"
test = false
doc = false
bench = false
